<resources>
    <string name="app_name">ARriddle</string>
    <!-- Titre des fragments (affiché dans le menu et dans la actionbar) -->
    <string name="title_apropos_fragment">À propos</string>
    <string name="title_settings_fragment">Paramètres</string>
    <string name="title_main_fragment">Accueil</string>
    <string name="title_leaderboard_fragment">Classement</string>
    <string name="title_map_fragment">Carte</string>
    <string name="title_list_keypoints_fragment">Points-clés</string>
    <string name="title_manage_game_fragment">Gérér la partie</string>
    <string name="title_join_fragment">Rejoindre une partie</string>
    <string name="title_create_game_fragment">Créer une partie</string>
    <string name="title_manage_user_fragment">Gérer l\'utilisateur</string>
    <string name="title_profile_fragment">Profil</string>
    <string name="title_list_user_fragment">Liste des utilisateurs</string>
    <string name="title_keypoint_fragment">Point-clé</string>
    <string name="title_create_keypoint_fragment">Créer un point-clé</string>
    <string name="title_game_fragment">Partie en cours</string>


    <!-- textes divers -->
    <string name="text_apropos">Cette application a été développée par Cyriaque Rousselot, Thibault Ayanides, Johan Manuel, Nino Ségala et Georges Le Bellier dans le cadre du cours de PMR de Centrale Lille. Le code source est disponible sur GitHub.</string>

    <!-- images content description -->
    <string name="content_description_gpl">Logo GPL</string>
    <string name="content_description_arriddle">logo arriddle</string>
    <string name="content_description_join_game">Image rejoindre partie</string>
    <string name="content_description_create_game">Image créer partie</string>
    <string name="content_description_leaderboard">Image Leaderboard</string>
    <string name="content_description_list_users">Image liste des utilisateurs</string>
    <string name="content_description_chest">Un coffre</string>
    <string name="content_description_cup">Une coupe</string>
    <string name="content_description_compass">Un compas</string>
    <string name="content_description_avatar">avatar de profil</string>
    <string name="content_description_light">Une amppoule</string>
    <string name="content_description_validate">Image validation</string>


    <!-- nav drawer labels -->
    <string name="nav_drawer_home">Accueil</string>
    <string name="nav_drawer_keypoints">Points clés</string>
    <string name="nav_drawer_map">Carte</string>
    <string name="nav_drawer_leaderboard">Classement</string>
    <string name="nav_drawer_manager">Gérer la partie</string>
    <string name="nav_drawer_settings">Paramètres</string>
    <string name="nav_drawer_apropos">À propos</string>
    <string name="nav_drawer_profile">Profil partie</string>
    <string name="nav_drawer_game">"Détails de la partie "</string>

    <!-- -label -->
    <string name="label_current_games">Parties en cours à proximité</string>
    <string name="label_join_game">Rejoindre une partie</string>
    <string name="label_create_game">Créer une partie</string>
    <string name="label_create_game2">Créer la partie</string>
    <string name="label_create_keypoint">Créer un point clef</string>
    <string name="label_keypoint_name">"Nom du point clé"</string>
    <string name="label_distance">Distance</string>
    <string name="label_nb_validation">Nombre de Validation</string>
    <string name="label_game_name2">Nom de la partie</string>
    <string name="label_keypoint_title">Points-clefs</string>
    <string name="label_user_list">Liste des utilisateurs</string>
    <string name="label_send_message_manage">Envoyer </string>
    <string name="label_send_message_label">Envoyer un message au groupe</string>
    <string name="label_write_message_edittext">Écrivez votre message</string>
    <string name="label_id_game">Identifiant de la partie</string>
    <string name="label_join_button">Rejoindre</string>
    <string name="label_list_users">Liste des utilisateurs</string>
    <string name="label_game_number">Id partie</string>
    <string name="label_pseudo">Pseudo</string>
    <string name="label_score">Score</string>
    <string name="label_received_messages">Messages reçus</string>
    <string name="label_logout">Se déconnecter</string>
    <string name="label_rank">Classement</string>
    <string name="label_hunt">Chasser</string>
    <string name="label_next_keypoint">Prochain point clef</string>
    <string name="label_list_keypoint">Liste des points-clés</string>
    <string name="label_description">Description de l\'activité</string>
    <string name="label_answer">Votre réponse</string>
    <string name="label_vocal">Vocal</string>
    <string name="label_send_answer">Envoyer</string>
    <string name="label_visibility">Partie publique ?</string>
    <string name="label_end_game">Terminer la partie</string>


    <!--test layouts --> <string name="nav_drawer_test">Test layout</string>

    <string name="map_title">Carte</string>


    <!-- Form create_game -->
    <string name="label_game_name">Nom de la partie*</string>
    <string name="edit_game_name">MyGame</string>
    <string name="label_nb_players">Nombre de joueurs maximum*</string>
    <string name="edit_nb_players">10</string>
    <string name="label_starting_date">Date de début de la partie*</string>
    <string name="edit_starting_date">DD-MM-YYYY</string>
    <string name="label_duration">Durée de la partie</string>
    <string name="edit_duration">HH:MM:SS</string>


    <string name="hint_id_game">FT56H8UI</string>

    <!-- errors -->
    <string name="error_game_id_doesnt_exist">ERREUR : l\'identifiant saisi n\'existe pas</string>
    <string name="error_game_id_format">ERREUR : un identifiant est composé de 8 caractères alphanumériques</string>



</resources>
