<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mainFragment"
        android:title="@string/nav_drawer_home" />
    <item
        android:id="@+id/keypointFragment"
        android:title="@string/nav_drawer_keypoints" />
    <item
        android:id="@+id/mapFragment"
        android:title="@string/nav_drawer_map" />
    <item
        android:id="@+id/leaderboardFragment"
        android:title="@string/nav_drawer_leaderboard" />
    <item
        android:id="@+id/manageGameFragment"
        android:title="@string/nav_drawer_manager" />
    <item
        android:id="@+id/settingsFragment"
        android:title="@string/nav_drawer_settings" />
    <item
        android:id="@+id/aproposFragment"
        android:title="@string/nav_drawer_apropos" />
</menu>