<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="fr.ec.arridle.fragments.user.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="0dp"
        tools:context=".fragments.user.ProfileFragment">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="147dp"
            android:layout_height="145dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="40dp"
            android:contentDescription="@string/content_description_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/gameText"
            style="@style/SubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/label_game_number"
            app:layout_constraintEnd_toStartOf="@+id/showGameNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView4" />

        <TextView
            android:id="@+id/pseudoText"
            style="@style/SubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/label_pseudo"
            app:layout_constraintBottom_toTopOf="@+id/scoreText"
            app:layout_constraintEnd_toStartOf="@+id/showPseudo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gameText" />

        <TextView
            android:id="@+id/scoreText"
            style="@style/SubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/label_score"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintEnd_toStartOf="@+id/showScore"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/showGameNumber"
            style="@style/SubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@{viewModel.property.gameId}"
            app:layout_constraintBaseline_toBaselineOf="@+id/gameText"
            app:layout_constraintStart_toEndOf="@+id/gameText" />

        <TextView
            android:id="@+id/showPseudo"
            style="@style/SubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@{viewModel.property.name}"
            app:layout_constraintBaseline_toBaselineOf="@+id/pseudoText"
            app:layout_constraintStart_toEndOf="@+id/pseudoText" />

        <EditText
            android:id="@+id/editShowPseudo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@{viewModel.property.name}"
            android:visibility="gone"
            app:layout_constraintBaseline_toBaselineOf="@+id/pseudoText"
            app:layout_constraintStart_toEndOf="@+id/pseudoText" />

        <TextView
            android:id="@+id/showScore"
            style="@style/SubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@{String.valueOf(viewModel.property.points) +' '+'p'+'o'+'i'+'n'+'t'+'s'}"
            app:layout_constraintBaseline_toBaselineOf="@+id/scoreText"
            app:layout_constraintStart_toEndOf="@+id/scoreText" />

        <TextView
            android:id="@+id/rankText"
            style="@style/SubTitle"
            android:layout_width="100dp"
            android:layout_height="92dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@{viewModel.rank == 1 ? String.valueOf(viewModel.rank) + 'e'+'r': String.valueOf(viewModel.rank) +'è'}"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.052"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scoreText" />

        <TextView
            android:id="@+id/messageText"
            style="@style/Title_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="240dp"
            android:text="@string/label_received_messages"
            app:layout_constraintBottom_toTopOf="@+id/buttonLogout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.067"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rankText"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/buttonLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/design_default_color_error"
            android:text="@string/label_logout"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>