<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="fr.ec.arridle.fragments.user.KeypointViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.user.KeypointFragment">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="151dp"
            android:layout_height="127dp"
            android:layout_marginBottom="64dp"
            android:contentDescription="@string/content_description_light"
            android:src="@drawable/ic_brain_by_skyclick"
            app:layout_constraintBottom_toTopOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView9"
            style="@style/Title_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@{viewModel.keypointProperty.name}"
            app:layout_constraintBottom_toTopOf="@+id/coords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/coords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@{String.valueOf(viewModel.keypointProperty.latitude)+'N'+' ' + String.valueOf(viewModel.keypointProperty.latitude)+'W'}"
            app:layout_constraintBottom_toTopOf="@+id/nbPoints"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/nbPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@{String.valueOf(viewModel.keypointProperty.points) +' '+'p' + 'o' +'i'+'n'+'t'+'s'}"
            app:layout_constraintBottom_toTopOf="@+id/imageView9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView10"
            style="@style/Title_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:text="@string/label_description"
            app:layout_constraintBottom_toTopOf="@+id/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/description"
            android:layout_width="352dp"
            android:layout_height="157dp"
            android:layout_marginBottom="24dp"
            android:text="@{viewModel.keypointProperty.description}"
            app:layout_constraintBottom_toTopOf="@+id/editTextAnswer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextAnswer"
            android:layout_width="212dp"
            android:layout_height="49dp"
            android:layout_marginBottom="44dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text=""
            app:layout_constraintBottom_toTopOf="@+id/buttonSend"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textAnswer"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/textAnswer"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:text="@string/label_answer"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextAnswer"
            app:layout_constraintEnd_toStartOf="@+id/editTextAnswer"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/label_send_answer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonVocal" />

        <Button
            android:id="@+id/buttonVocal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_vocal"
            app:layout_constraintBaseline_toBaselineOf="@+id/buttonSend"
            app:layout_constraintEnd_toStartOf="@+id/buttonSend"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>