<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="fr.ec.arridle.fragments.MainViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="true"
        tools:context=".fragments.MainFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewJoinGame"
                android:layout_width="@dimen/card_size"
                android:layout_height="@dimen/card_size"
                android:layout_marginTop="36dp"
                app:cardBackgroundColor="@color/colorSecondary"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cardViewCreateGame"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageJoinGame"
                    android:layout_width="@dimen/icon_card_size"
                    android:layout_height="@dimen/icon_card_size"
                    android:layout_gravity="center"
                    android:contentDescription="@string/content_description_join_game"
                    app:srcCompat="@drawable/join_game" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewCreateGame"
                android:layout_width="@dimen/card_size"
                android:layout_height="@dimen/card_size"
                android:layout_marginTop="36dp"
                app:cardBackgroundColor="@color/colorSecondary"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toStartOf="@+id/cardViewJoinGame"
                app:layout_constraintHorizontal_bias="0.56"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageCreateGame"
                    android:layout_width="@dimen/icon_card_size"
                    android:layout_height="@dimen/icon_card_size"
                    android:layout_gravity="center"
                    android:contentDescription="@string/content_description_create_game"
                    app:srcCompat="@drawable/create_game" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/labelCreateGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/label_create_game"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardViewCreateGame" />

            <TextView
                android:id="@+id/labelJoinGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="28dp"
                android:fontFamily="@font/roboto"
                android:text="@string/label_join_game"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardViewJoinGame" />

            <TextView
                android:id="@+id/labelCurrentGames"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto"
                android:text="@string/label_current_games"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelCreateGame"
                app:layout_constraintVertical_bias="0.03" />

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/itemsswipetorefresh"
                android:layout_width="match_parent"
                android:layout_height="413dp"
                android:layout_marginTop="48dp"
                android:clipToPadding="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelCurrentGames">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/game_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"

                    app:listGame="@{viewModel.properties}"
                    tools:listitem="@layout/item_game" />
            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>